<resources>
    <string name="app_name" translatable="false">Vimo</string>
    <string name="username">Username</string>
    <string name="usernameEmail">Username/email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="rememberMe">Remember me</string>
    <string name="signUp">Sign up</string>
    <string name="signUpUnderscored"><u>Sign up</u></string>
    <string name="alternativeSignIn">Or sign in with</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="timeStamp">Time stamp</string>
    <string name="cinemas">Cinemas</string>
    <string name="movies">Movies</string>
    <string name="showtimes">Showtimes</string>
    <string name="sessions">Sessions</string>
    <string name="movie">Movie</string>
    <string name="errUsernameEmpty">Username cannot be empty</string>
    <string name="errPasswordEmpty">Password cannot be empty</string>
    <string name="errPasswordNotValid">The specified password is not valid</string>
    <string name="errEmailEmpty">Email cannot be empty</string>
    <string name="errEmailNotValid">The specified email address is not valid</string>
    <string name="errUsernameEmailEmpty">Username/email cannot be empty</string>
    <string name="vimo" translatable="false">Vimo</string>
    <string name="aboutVersion">Version 1.0 (alpha)</string>
    <string name="aboutAndroid">Android 10.0 (min. 8.0)</string>
    <string name="aboutDeveloper">Developed by Pablo Jiménez</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="favourites">Favourites</string>
    <string name="loading">Loading...</string>
    <string name="order_by_title">Order by title</string>
    <string name="remove_favourite_movie">Remove favourite movie</string>
    <string name="synopsis">Synopsis</string>
    <string name="tappedOrderByTitle">You have tapped \"Order by title\"</string>
    <string name="removeFavouriteMovie1">"Are you sure that you want to remove the movie "</string>
    <string name="removeFavourite2">" from your favourites?"</string>
    <string name="removeFavouriteSession">"Are you sure that you want to remove this session from your favourites?"</string>
    <string name="usernameCabezaperro" translatable="false">Cabezaperro</string>
    <string name="emailCabezaperro" translatable="false">me@cabezaperro.com</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Vimo notification channel</string>
    <string name="naggingBitchToast">Add more movies to favourites!</string>
    <string name="log_out">Log out</string>
    <string name="new_username">New username</string>
    <string name="confirm">Confirm</string>
    <string name="username_is_not_valid">Username is not valid</string>
    <string name="errUsernameTooLong">Username is too long</string>
    <string name="errPasswordsDontMatch">Passwords don\'t match</string>
    <string name="errPasswordNotCorrect">Password is not correct</string>
    <string name="change_your_username">Change your username</string>
    <string name="errNewUsernameIsSameAsOldOne">New username is the same as the old one</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="old_password">Old password</string>
    <string name="new_email">New email</string>
    <string name="errNewEmailIsSameAsOldOne">New email is the same as the old one</string>
    <string name="errNewPasswordIsSameAsOldOne">New password is the same as old one</string>
    <string name="address">Address</string>
    <string name="year">Year</string>
    <string name="company">Company</string>
    <string name="errInvalidData">The data you entered is not valid</string>
    <string name="removeFavouriteCinema">Remove favourite cinema</string>
    <string name="removeFavouriteCinema1">"Are you sure that you want to remove "</string>
    <string name="profile">Profile</string>
    <string name="your_username">Your username</string>
    <string name="your_email">Your email</string>
    <string name="profile_image">Profile image</string>
    <string name="region_and_language"><![CDATA[Region & language]]></string>
    <string name="select_your_language">Select your language</string>
    <string name="selected_language">Selected language</string>
    <string name="language">Language</string>
    <string name="notifications_and_updates"><![CDATA[Notifications & updates]]></string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="update_settings">Update settings</string>
    <string name="custom_settings_for_updates">Custom settings for updates</string>
    <string name="updates">Updates</string>
    <string name="language_determined_by_operating_system">Language determined by operating system</string>
    <string name="new_messages">" new messages"</string>
    <string name="favourite_movie_added">Favourite movie added</string>
    <string name="favourite_movie_updated">Favourite movie updated</string>
    <string name="favourite_cinema_added">Favourite cinema added</string>
    <string name="favourite_cinema_updated">Favourite cinema updated</string>
    <string name="order_by_year">Order by year</string>
    <string name="order_by_name">Order by name</string>
    <string name="order_by_address">Order by address</string>
    <string name="welcome">Welcome to Vimo, human!</string>
    <string name="errUsernameAndOrPasswordAreNotCorrect">The specified username and/or password are not correct</string>
    <string name="welcome_intent" translatable="false">com.cabezaperro.WELCOME_INTENT</string>
    <string name="tapMovie">"You've tapped on the movie "</string>
    <string name="tapCinema">"You've tapped on the cinema "</string>
    <string name="unavailable">Unavailable</string>
    <string name="no_image"><![CDATA[<no image>]]></string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="error_creating_user">Error in the user creation process</string>
    <string name="account_already_exists">An account associated with that email already exists</string>
    <string name="error_sign_in">An error occurred while trying to sign in</string>
    <string name="updating_profile_image">Updating profile image</string>
    <string name="profile_image_updated">Profile image updated successfully</string>
    <string name="error_updating_profile_image">Error updating profile image</string>
    <string name="signing_in">Signing in...</string>
    <string name="errEmailAndOrPasswordAreNotCorrect">The specified email and/or password are not correct</string>
    <string name="username_updated">Username updated successfully</string>
    <string name="updating_username">Updating username</string>
    <string name="updating_password">Updating password</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="error_updating_password">Error updating password</string>
    <string name="error_updating_username">Error updating username</string>
    <string name="authenticate_to_change_password">Password updated! Please, authenticate again with your new password</string>
    <string name="minutes">minutes</string>
    <string name="genre">Genre</string>
    <string name="runtime">Runtime</string>
    <string name="remove_favourite_session">Remove favourite session</string>
    <string name="welcome_to">Welcome to</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="password_requirements">Password must be between 8 and 12 characters long and contain at least one uppercase letter, a lowercase letter, and a number</string>
    <string name="main_cast">Main cast</string>
    <string name="director" translatable="false">Director</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="remove_favourite_showtime">Remove favourite showtime</string>
    <string name="removeFavouriteShowtime1">"Are you sure that you want to remove the showtime "</string>
    <string name="no_sessions_available">This cinema has no sessions available</string>
</resources>
