<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mniMovies"
            android:title="@string/movies"
            android:icon="@drawable/ic_movie"
            />
        <item
            android:id="@+id/mniCinemas"
            android:title="@string/cinemas"
            android:icon="@drawable/ic_ticket_office_2" />
        <item
            android:id="@+id/mniShowtimes"
            android:title="@string/showtimes"
            android:icon="@drawable/ic_access_time_black_24dp" />
        <item
            android:id="@+id/mniFavourites"
            android:title="@string/favourites"
            android:icon="@drawable/ic_star_border_black_24dp" />
    </group>

    <group>
        <item android:title="@string/options">
            <menu>
                <item
                    android:id="@+id/mniSettings"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_settings_black_24dp" />
                <item
                    android:id="@+id/mniAbout"
                    android:title="@string/about"
                    android:icon="@drawable/ic_info_outline_black_24dp" />
                <item
                    android:id="@+id/mniLogOut"
                    android:title="@string/log_out"
                    android:icon="@drawable/ic_exit_to_app_black_24dp" />
            </menu>
        </item>
    </group>
</menu>