<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.favourite.FavouriteActivity">

    <Button
        android:id="@+id/btnFavouriteMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/movies" />

    <Button
        android:id="@+id/btnFavouriteCinemas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/cinemas" />

    <Button
        android:id="@+id/btnFavouriteShowtimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/showtimes" />

    <Button
        android:id="@+id/btnFavouriteSessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/sessions" />
</LinearLayout>