<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/splashColor"
    android:padding="@dimen/layoutPadding"
    tools:context=".ui.AboutActivity">

    <ImageView
        android:id="@+id/imvAboutLogo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/flickmap" />

    <TextView
        android:id="@+id/txvNavigationUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/vimo"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txvNavigationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:text="@string/aboutVersion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/aboutAndroid" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/aboutDeveloper" />
</LinearLayout>