<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnlMovieItemLayout"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:layout_margin="4dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/imvMovieItemPoster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvMovieItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txvMovieItemGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textAlignment="center"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txvMovieItemRuntime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textAlignment="center"
            android:textSize="12sp"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>